--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,4 +42,13 @@ jobs:
           done
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn clean install
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: vinayc02/mail-scheduler
+          tags: 1.0.01
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
