--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>mail-scheduler</finalName>
+
 	</build>
 
 </project>
