--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DataSource Configuration
 server.port=7821
-spring.datasource.url=jdbc:postgresql://localhost:5432/newdb
+spring.datasource.url=jdbc:postgresql://postgres:5432/newdb
 spring.datasource.username=postgres
 spring.datasource.password=ROOT
 spring.datasource.driver-class-name=org.postgresql.Driver
