--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,30 @@
 version: '3.8'
-services:
-  app:
-    build: .
-    ports:
-      - "7821:7821"
-    depends_on:
-      - db
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/newdb
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: ROOT
 
-  db:
+services:
+  postgres:
     image: postgres:13
     environment:
-      POSTGRES_DB: newdb
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: ROOT
+      POSTGRES_DB: newdb
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      postgres:
+        condition: service_healthy
+    ports:
+      - "7821:7821"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/newdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: ROOT
