--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 # DataSource Configuration
 server.port=7821
-spring.datasource.url=jdbc:postgresql://postgres:5432/newdb
-spring.datasource.username=postgres
-spring.datasource.password=ROOT
+spring.datasource.url=jdbc:postgresql://postgres:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -14,14 +13,14 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.open-in-view=false
 
+# Mail Configuration (Gmail SMTP)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vinaywinde@gmail.com
-spring.mail.password=gsqynuraubhbpyvc
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.protocol=smtp
 spring.mail.smtp.auth=true
 spring.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.transport.protocol=smtp
-
