--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,19 @@
 
 	<build>
 		<plugins>
+			<!-- Add this plugin configuration -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.3</version> <!-- Stable version -->
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore> <!-- If you want to ignore test failures -->
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
