--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CICD for mail-schduler
+name: Java CI/CD for mail-scheduler
 
 on:
   push:
@@ -6,7 +6,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     services:
@@ -34,6 +33,12 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.7/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
       - name: Wait for PostgreSQL to be ready
         run: |
           for i in {1..10}; do
@@ -43,14 +48,19 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
-      - name: Build & push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v5
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          image: vinayc02/mail-scheduler
-          tags: 1.0.01
-          registry: docker.io
-          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: vinayc02/mail-scheduler:1.0.01
+
       - name: Docker Compose up
         run: docker-compose up --build --abort-on-container-exit
